--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My First Portfolio prueba primer commit</title>
+        <title>My First Portfolio</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="icon" type="image/x-icon" href="images/jdFavi.png">
         <script src="javaScript/translations.js" defer></script>
