--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <header>
             <nav>
                 <ul>
-                    <li><button class="langBtn" onclick="window.location.href='?lang=en'">English</a></button></li>
-                    <li><button class="langBtn" onclick="window.location.href='?lang=es'">Spanish</a></button></li>
-                    <li><button class="langBtn" onclick="window.location.href='?lang=de'">Deutsch</a></button></li>
+                    <li><button class="langBtn" onclick="window.location.href='?lang=en'"><img src="images/reino-unido.png" width="20" height="20">English</a></button></li>
+                    <li><button class="langBtn" onclick="window.location.href='?lang=es'"><img src="images/espana.png" width="20" height="20">Spanish</a></button></li>
+                    <li><button class="langBtn" onclick="window.location.href='?lang=de'"><img src="images/aleman.png" width="20" height="20">Deutsch</a></button></li>
                 </ul>
             </nav>
         </header>
