add formation dam

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
 
         <h1 id="name" style="font-size: 60px;">Ismael Juarez Garcia</h1>
         <p id="role">Administrative Assistant & App Developer</p>
+        <p><a href="fp-dam.html">📘 Ver mi formación en DAM</a></p>
 
         <img alt="personal photo" src="images/meta.jpg" width="800">
         <br><hr>
 
-        <a id="github" href="https://github.com/juarezracing">My github</a>
+        <a id="github" href="https://github.com/juarez-dev">My github</a>
         <br><hr>
 
         <address>
