--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p id="role">Administrative Assistant & App Developer</p>
         <p><a href="dam.html">📘 Ver mi formación en DAM</a></p>
 
-        <img alt="personal photo" src="images/meta.jpg" width="400">
+        <img alt="personal photo" src="images/meta.jpg" width="50%">
         <br><hr>
 
         <a id="github" href="https://github.com/juarez-dev">My github</a>
