--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <h1 id="name" style="font-size: 60px;">Ismael Juarez Garcia</h1>
         <p id="role">Administrative Assistant & App Developer</p>
-        <p><a href="dam.html">📘 Ver mi formación en DAM</a></p>
+        <p><a id="fp-link" href="dam.html"> Ver mi formación en DAM</a></p>
 
         <img alt="personal photo" src="images/meta.jpg" width="25%">
         <br><hr>
