--- a/dam.html
+++ b/dam.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>FP DAM - Ismael Juarez</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Técnico Superior en Desarrollo de Aplicaciones Multiplataforma (DAM)</h1>
-    <p><strong>Centro:</strong> CIDEAD (Centro para la Innovación y Desarrollo de la Educación a Distancia)</p>
-    <p><strong>Año de finalización:</strong> 2025</p>
-    <p><strong>Nivel:</strong> Ciclo Formativo de Grado Superior (EQF Nivel 5)</p>
+    <h1>Higher Technician in Multiplatform Application Development (DAM)</h1>
+    <p><strong>Institution:</strong> CIDEAD (Center for Innovation and Development of Distance Education)</p>
+    <p><strong>Graduation Year:</strong> 2025</p>
+    <p><strong>Level:</strong> Higher Vocational Training (EQF Level 5)</p>
 
-    <h2>Competencias Adquiridas</h2>
+    <h2>Acquired Competencies</h2>
     <ul>
-        <li>Desarrollar aplicaciones multiplataforma con acceso a bases de datos.</li>
-        <li>Crear interfaces gráficas de usuario (GUI) eficientes y usables.</li>
-        <li>Usar sistemas de control de versiones como Git.</li>
-        <li>Aplicar POO, patrones de diseño y buenas prácticas.</li>
-        <li>Consumir servicios web y APIs REST.</li>
-        <li>Desarrollar apps móviles para Android.</li>
-        <li>Gestionar bases de datos SQL y NoSQL.</li>
-        <li>Aplicar medidas de seguridad en desarrollo de software.</li>
+        <li>Develop multiplatform applications with database access.</li>
+        <li>Create efficient and user-friendly graphical user interfaces (GUIs).</li>
+        <li>Use version control systems such as Git.</li>
+        <li>Apply OOP, design patterns, and best practices.</li>
+        <li>Consume web services and REST APIs.</li>
+        <li>Develop mobile apps for Android.</li>
+        <li>Manage SQL and NoSQL databases.</li>
+        <li>Implement security measures in software development.</li>
     </ul>
 
-    <p>📎 <strong>Enlace oficial:</strong> 
+    <p>📎 <strong>Official link:</strong> 
         <a href="https://www.todofp.es/que-como-y-donde-estudiar/que-estudiar/familia/informatica-comunicaciones/desarrollo-aplicaciones-multiplataforma.html" target="_blank">
-            Ver currículum oficial en TodoFP
+            View official curriculum at TodoFP
         </a>
     </p>
 
     <br>
-    <a href="index.html">⬅️ Volver al inicio</a>
+    <a href="index.html">⬅️ Back to home</a>
 </body>
 </html>
