--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <h1 id="name" style="font-size: 60px;">Ismael Juarez Garcia</h1>
         <p id="role">Administrative Assistant & App Developer</p>
-        <p><a id="fp-link" href="https://www.todofp.es/dam/jcr:7655e32d-08a3-47a7-a479-ddb6f032c63e/n-tsdesarrolloaplicacionesmultiplataformaen-pdf.pdf">See my Developer Formation</a></p>
+        <p><a id="fp-link" href="https://www.todofp.es/dam/jcr:7655e32d-08a3-47a7-a479-ddb6f032c63e/n-tsdesarrolloaplicacionesmultiplataformaen-pdf.pdf" target="_blank" rel="noopener nreferrer">See my Developer Formation</a></p>
 
         <img alt="personal photo" src="images/meta.jpg" width="25%">
         <br><hr>
