--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
         <p><a id="fp-link" href="https://www.todofp.es/dam/jcr:7655e32d-08a3-47a7-a479-ddb6f032c63e/n-tsdesarrolloaplicacionesmultiplataformaen-pdf.pdf" target="_blank" rel="noopener nreferrer">See my Developer Formation</a></p>
 
         <img alt="personal photo" src="images/meta.jpg" width="25%">
+
+        <h1>Some Symple Apps</h1>
+        <div class="grid-container">
+            <div class="card">Symple Calculator App</div>
+            <div class="card">Platform Stream Information</div>
+        </div>
+        
         <br><hr>
 
         <a id="github" href="https://github.com/juarez-dev">My github</a>
