--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p id="role">Administrative Assistant & App Developer</p>
         <p><a id="fp-link" href="https://www.todofp.es/dam/jcr:7655e32d-08a3-47a7-a479-ddb6f032c63e/n-tsdesarrolloaplicacionesmultiplataformaen-pdf.pdf" target="_blank" rel="noopener nreferrer">See my Developer Formation</a></p>
 
-    <div text-aling="center"><img alt="personal photo" src="images/meta.jpg" width="25%"></div>
+    <div style="text-align: center;"><img alt="personal photo" src="images/meta.jpg" width="25%"></div>
 
         <h1>Some Symple Apps</h1>
         <div class="grid-container">
