--- a/index.html
+++ b/index.html
@@ -1,48 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My First Portfolio</title>
-        <link rel="stylesheet" href="styles.css">
-        <link rel="icon" type="image/x-icon" href="images/jdFavi.png">
-        <script src="javaScript/translations.js" defer></script>
-    </head>
-    <body>
-        <header>
-            <nav>
-                <ul>
-                    <li><button class="langBtn" onclick="window.location.href='?lang=en'"><img src="images/reino-unido.png" width="20" height="20">English<</button></li>
-                    <li><button class="langBtn" onclick="window.location.href='?lang=es'"><img src="images/espana.png" width="20" height="20">Spanish</button></li>
-                    <li><button class="langBtn" onclick="window.location.href='?lang=de'"><img src="images/aleman.png" width="20" height="20">Deutsch</button></li>
-                </ul>
-            </nav>
-        </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My First Portfolio</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/x-icon" href="images/jdFavi.png" />
+    <script src="javaScript/translations.js" defer></script>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li>
+            <button class="langBtn" onclick="window.location.href='?lang=en'">
+              <img src="images/reino-unido.png" width="20" height="20" />
+              English
+            </button>
+          </li>
+          <li>
+            <button class="langBtn" onclick="window.location.href='?lang=es'">
+              <img src="images/espana.png" width="20" height="20" />
+              Spanish
+            </button>
+          </li>
+          <li>
+            <button class="langBtn" onclick="window.location.href='?lang=de'">
+              <img src="images/aleman.png" width="20" height="20" />
+              Deutsch
+            </button>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-        <h1 id="name" style="font-size: 60px;">Ismael Juarez Garcia</h1>
-        <p id="role">Administrative Assistant & App Developer</p>
-        <p><a id="fp-link" href="https://www.todofp.es/dam/jcr:7655e32d-08a3-47a7-a479-ddb6f032c63e/n-tsdesarrolloaplicacionesmultiplataformaen-pdf.pdf" target="_blank" rel="noopener nreferrer">See my Developer Formation</a></p>
+    <h1 id="name" style="font-size: 60px;">Ismael Juarez Garcia</h1>
+    <p id="role">Administrative Assistant & App Developer</p>
+    <p>
+      <a
+        id="fp-link"
+        href="https://www.todofp.es/dam/jcr:7655e32d-08a3-47a7-a479-ddb6f032c63e/n-tsdesarrolloaplicacionesmultiplataformaen-pdf.pdf"
+        target="_blank"
+        rel="noopener noreferrer"
+        >See my Developer Formation</a
+      >
+    </p>
 
-    <div style="text-align: center;"><img alt="personal photo" src="images/meta.jpg" width="25%"></div>
+    <div style="text-align: center;">
+      <img alt="personal photo" src="images/meta.jpg" width="25%" />
+    </div>
 
-        <h1>Some Symple Apps</h1>
-        <div class="grid-container">
-            <div class="card">Symple Calculator App</div>
-            <div class="card">Platform Stream Information</div>
-        </div>
-        
-        <br><hr>
+    <h1>Some Symple Apps</h1>
+    <div class="grid-container">
+      <div class="card">Symple Calculator App</div>
+      <div class="card">Platform Stream Information</div>
+    </div>
 
-        <a id="github" href="https://github.com/juarez-dev">My github</a>
-        <br><hr>
+    <br />
+    <hr />
+    <a id="github" href="https://github.com/juarez-dev">My github</a>
+    <br />
+    <hr />
 
-        <address>
-            <span id="writtenBy">Written by</span> Ismael Juarez Garcia.<br>
-            <span id="contact"> Contact me:</span><br>
-            +49 1575 6365674<br>
-            juarezdev@gmail.com<br>
-            Munich<br>
-            Deutschland
-        </address>
-    </body>
+    <address>
+      <span id="writtenBy">Written by</span> Ismael Juarez Garcia.<br />
+      <span id="contact"> Contact me:</span><br />
+      +49 1575 6365674<br />
+      juarezdev@gmail.com<br />
+      Munich<br />
+      Deutschland
+    </address>
+  </body>
 </html>
