--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <h1 id="name">Ismael Juarez Garcia
       <div style="text-align: center; font-size:10px;">
-        <img alt="personal photo" src="images/meta.jpg" width="25%" />
+        <img alt="personal photo" src="images/meta.jpg" width="25%" style="border-radius: 50%;" />
       </div>
     </h1>
     
