--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </header>
 
     <h1 id="name">Ismael Juarez Garcia
-      <div style="text-align: center; font-size:10px;">
+      <div style="text-align: right; font-size:10px;">
         <img alt="personal photo" src="images/meta.jpg" width="25%" style="border-radius: 50%;" />
       </div>
     </h1>
