--- a/index.html
+++ b/index.html
@@ -34,15 +34,14 @@
           </li>
         </ul>
       </nav>
-    </header>
 
-    <div>
-      <div style="text-align: right; font-size:10px;>
+    <div class="profile">
+      <div class="profile-img" style="text-align: left; font-size:10px;>
         <h1 id="name">Ismael Juarez Garcia
             <img alt="personal photo" src="images/meta.jpg" width="25%" style="border-radius: 50%;" />
         </h1>
-    </div>
-      <div>
+      </div>
+      <div class="profile-description">
       <p id="role">Administrative Assistant & App Developer</p>
         <p>
           <a id="fp-link"
@@ -52,6 +51,8 @@
         </p>
       </div>
     </div>
+  </header>
+
     
     <br/><hr/><br/><hr/>
     
