--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </nav>
 
     <div class="profile">
-      <div class="profile-img" style="text-align: left; font-size:10px;>
+      <div class="profile-img" font-size:10px;>
         <h1 id="name">Ismael Juarez Garcia
             <img alt="personal photo" src="images/meta.jpg" width="25%" style="border-radius: 50%;" />
         </h1>
