--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 
     <div class="profile">
       <div class="profile-img">
-            <img alt="personal photo" src="images/meta.jpg" width="25%" style="border-radius: 50%;" />
+            <img alt="personal photo" src="images/meta.jpg" style="border-radius: 50%;" />
       </div>
       <div class="profile-description">
-      <p id="role">Administrative Assistant & App Developer</p>
+      <p id="role">Administrative Assistant & App Developer1</p>
         <p>
           <a id="fp-link"
             href="https://www.todofp.es/dam/jcr:7655e32d-08a3-47a7-a479-ddb6f032c63e/n-tsdesarrolloaplicacionesmultiplataformaen-pdf.pdf"
