--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <img alt="personal photo" src="images/meta.jpg" style="border-radius: 50%;" />
       </div>
       <div class="profile-description">
-      <p id="role">Administrative Assistant & App Developer1</p>
+      <p id="role">Administrative Assistant & App Developer</p>
         <p>
           <a id="fp-link"
             href="https://www.todofp.es/dam/jcr:7655e32d-08a3-47a7-a479-ddb6f032c63e/n-tsdesarrolloaplicacionesmultiplataformaen-pdf.pdf"
