--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div class="profile">
       <div class="profile-img">
-            <img alt="personal photo" src="images/meta.jpg" style="border-radius: 50%;" />
+            <img alt="personal photo" src="images/meta.png" style="border-radius: 50%;" />
       </div>
       <div class="profile-description">
       <p id="role">Administrative Assistant & App Developer</p>
@@ -76,5 +76,8 @@
       Munich<br />
       Deutschland
     </address>
+  </body>
+</html>
+
   </body>
 </html>
