--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
     
 <h3>BASIC ANDROID APPS</h3>
 <div class="grid-container">
-  <div class="card">
+  <a class="card" href="Pdfs/calculator.pdf" target="_blank">
     <div class="card-title">SIMPLE CALCULATOR APP</div>
     <img src="images/calculadora.jpg" alt="Calculator App" />
-  </div>
-  <div class="card">
+  </a>
+  <a class="card" href="Pdfs/streamify.pdf" target="_blank">
     <div class="card-title">STREAM PLATFORMS INFORMATION APP</div>
     <img src="images/platforms.jpg" alt="stream app" />
-  </div>
+  </a>
 </div> 
 
     <br /><hr />
