--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
     
 <h3 id="title-androidcard">BASIC ANDROID APPS</h3>
 <div class="grid-container">
-  <a class="card" href="Pdfs/calculator.pdf" target="_blank">
+  <a class="card" href="pdfs/calculator.pdf" target="_blank">
     <div id="androidcard1" class="card-title">SIMPLE CALCULATOR</div>
     <img src="images/calculadora.jpg" alt="Calculator App" />
   </a>
-  <a class="card" href="Pdfs/streamify.pdf" target="_blank">
+  <a class="card" href="pdfs/streamify.pdf" target="_blank">
     <div id="androidcard2" class="card-title">STREAM PLATFORMS INFORMATION</div>
     <img src="images/platforms.jpg" alt="stream app" />
   </a>
