--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
     <h3 id="title-javacard">SIMPLE JAVA PROJECTS</h3>
     <div class="grid-container">
   <div class="card">
-    <div class="card-title">SIMPLE CALCULATOR APP</div>
+    <div class="card-title">...</div>
   </div>
   <div class="card">
-    <div class="card-title">STREAM PLATFORMS INFORMATION APP</div>
+    <div class="card-title">...</div>
   </div>
 </div> 
     <br/><hr/><br/><hr/>
