--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <span id="writtenBy">Written by</span> Ismael Juarez Garcia.<br />
       <span id="contact"> Contact me:</span><br />
       +49 1575 6365674<br />
-      juarezdev@gmail.com<br />
+      juarezgdev@gmail.com<br />
       Munich<br />
       Deutschland
     </address>
