--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     
     <br/><hr/><br/><hr/>
     
-    <h3 id="title-javacard">SIMPLE JAVA PROJECTS</h3>
+    <h3 id="title-javacard">...</h3>
     <div class="grid-container">
   <div class="card">
     <div class="card-title">...</div>
@@ -85,10 +85,9 @@
       <span id="writtenBy">Written by</span> Ismael Juarez Garcia.<br />
       <span id="contact"> Contact me:</span><br />
       +49 1575 6365674<br />
-      juarezgdev@gmail.com<br />
+      juarezdev@gmail.com<br />
       Munich<br />
       Deutschland
     </address>
   </body>
 </html>
-
